tests/invalid/abs_non_numeric/main.py
x: bool = True
y: int = abs(x)
